--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,13 @@ Spacing:
 body {
     font-family: "Outfit", sans-serif;
     
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+    display: grid;
+    place-items: center;
+    grid-template-rows: 1fr auto; /* sends footer to the bottom */
+
     width: 100vw;
     min-height: 100svh;
     overflow: hidden;
@@ -34,7 +38,7 @@ body {
 }
 
 img {
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 h1 {
@@ -42,6 +46,7 @@ h1 {
     font-size: 22px;
     line-height: 120%;
     letter-spacing: 0px;
+    padding-top: 16px;
 }
 
 p {
@@ -53,8 +58,8 @@ p {
 }
 
 .card {
-    width: 13vw;
-    min-width: 250px;
+    width: 90%;
+    max-width: 18rem;
     
     display: flex;
     flex-direction: column;
@@ -67,3 +72,8 @@ p {
     padding: 20px;
 }
 
+.attribution {
+    width: 100vw;
+    min-height: 5vh; /* gives footer space from the bottom */
+    text-align: center;
+}
